--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "egy-store",
   "version": "0.1.0",
   "private": true,
+  "engines": { "node": "v14.18.0",
+  "npm": "6.14.15"}, 
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
     "@reduxjs/toolkit": "^1.6.2",
